# giants-editor-mcp

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  giants_mcp_server.py  known_functions.json  pyproject.toml
docs/: ARCHITECTURE.md  RELEASING.md  TOOLS.md
docs/research/: EDITOR_BINARY_NOTES.md  EDITOR_DISCOVERED_FUNCTIONS.txt
ge_mcp/: __init__.py  api.py  bridge.py  config.py  helpers.py  knowledge.py  server.py  snippets.py  validation.py
ge_mcp/tools/: __init__.py  assets.py  core.py  fields.py  hygiene.py  materials.py  nodes.py  scene.py  snippets.py  splines.py  terrain.py  traffic.py  vision.py
lua/: ge_mcp_helpers.lua  ge_mcp_poller.lua
scripts/: build_mcpb.py  docgen.py  regression.py
snippets/: README.md  capture-heights-rect.json  restore-heights-rect.json
tests/offline/: run_all.py
