[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ge-mcp"
version = "1.0.0"
description = "MCP server that lets Claude drive a live GIANTS Editor (FS25) session: run Lua, place/paint/shape along splines, inspect the scenegraph, see the viewport, replay proven snippets."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "MARVVV" }]
keywords = ["mcp", "giants-editor", "farming-simulator", "fs25", "modding", "claude"]
dependencies = ["mcp>=1.2"]

[project.scripts]
ge-mcp = "ge_mcp.server:main"

[tool.setuptools]
packages = ["ge_mcp", "ge_mcp.tools"]
